# relayer

./: .codecov.yml  .codespellrc  .dockerignore  .gitignore  .gitmodules  .gitpod.yml  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .json  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  Readmes  SECURITY.md  add this metadata to the GitHub repo  ci-chains.sh  clib.go  client-data.json  codecov.yaml  config-relayer  config-relayer.sh  crypto-org.json  dev-chains.sh  dev-env  dev-env-sub  docker-compose.yaml  docker-compose.yml.example  four-chainz  gaia.json  go.mod  go.sum  go.work  go.work.sum  goz-client-data.json  goz-roster.csv  hub.json  (+11 more)
.github/: CODEOWNERS  copilot-instructions.md  labeler.yml
_test/: README.md  relayer_chain_test.go  relayer_compat_test.go  test_chains.go  test_queries.go  test_setup.go
cclient/: cmbft_client_wrapper.go  consensus.go  consensus_cmbft.go  consensus_gordian.go  gordian_test.go
clib/: main.go
client/: client_wrapper.go  cmbft_client_wrapper.go  cmbft_consensus.go  cometbft_consensus.go  consensus.go  consensus_interfaces.go  gordian.go  i.go
cmd/: api.go  appstate.go  chain.go  chains.go  chains_test.go  config.go  config_test.go  dev.go  doc.go  errors.go  faucet.go  feegrant.go  fetch.go  flags.go  flags_test.go  keys.go  keys_test.go  light.go  listen.go  lite.go  paths.go  query.go  raw.go  root.go  services.go  start.go  start_test.go  strategy.go  system_test.go  testnets.go  tx.go  version.go  xfer.go
configs/: agoric.json  (+1 more)
go-export/: Cargo.toml  build.rs
go-export/src/: lib.rs
(+1703 files in other folders)
